checking for changes

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Azad Parinda
-tagline: where freedom comes true...
+tagline: where freedom comes true....
 author :
   name : Sagar Nikam
   email : sagarnikam123@gmail.com
