--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Azad Parinda
-tagline: where freedom comes true....
+title : Sagar Nikam
+tagline: notes
 author :
   name : Sagar Nikam
   email : sagarnikam123@gmail.com
